--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "latest",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
     "ejs": "latest",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
