--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-sdk": "latest",
+    "@aws-sdk/client-comprehendmedical-node": "^0.1.0-preview.2",
+    "aws-sdk": "^2.1258.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dependencies": "^0.0.1",
+    "dotenv": "^16.0.3",
     "ejs": "latest",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
@@ -14,6 +16,7 @@
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.0",
     "parse": "^3.5.0",
+    "request": "^2.88.2",
     "sequelize": "^6.25.7"
   },
   "type": "module",
