changed the routes and added pages

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "dependencies": "^0.0.1",
     "expo": "^47.0.3",
     "expo-asset": "~8.6.2",
+    "expo-av": "~13.0.1",
     "expo-font": "~11.0.1",
+    "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.1",
     "native-base": "^3.4.22",
